# bloxchat

./: README.md  package.json  turbo.json
apps/desktop/: README.md  package.json  vite.config.ts
apps/desktop/scripts/: tauri-build.mjs
apps/desktop/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  media.rs  roblox.rs  updater.rs
apps/desktop/src/components/: ChatHeader.tsx  ChatInput.tsx  DiscordRpcBridge.tsx  FormattedText.tsx  MessageItem.tsx  RequireAuth.tsx
apps/desktop/src/components/ui/: button-group.tsx  slider.tsx
apps/desktop/src/contexts/: AuthContext.tsx  ChatContext.tsx
apps/desktop/src/hooks/: useDiscordRpc.ts  useTauriEvents.ts
apps/desktop/src/lib/: commands.ts  emoji.ts  env.ts  mentions.ts  store.ts  trpc.ts  utils.ts
apps/desktop/src/pages/: Layout.tsx  LoginPage.tsx  MainChat.tsx  SettingsPage.tsx
apps/server/: package.json
apps/server/src/: index.ts
scripts/: bump-desktop-version.mjs
